--- a/modules/claim/locale/fr_FR.po
+++ b/modules/claim/locale/fr_FR.po
@@ -927,3 +927,7 @@ msgctxt ""
 "wizard_button:claim.indemnification.validate,select_indemnifications,reload_selection:"
 msgid "Continue"
 msgstr "Continuer"
+
+msgctxt "field:contract.option,benefits:"
+msgid "Benefits"
+msgstr "Prestations"
