--- a/modules/rule_engine/locale/fr_FR.po
+++ b/modules/rule_engine/locale/fr_FR.po
@@ -54,8 +54,8 @@ msgid "Tags"
 msgstr "Labels"
 
 msgctxt "field:ir.export_package,tree_elements:"
-msgid "Tree Elements"
-msgstr "Eléments de l'arbre"
+msgid "Rule Functions"
+msgstr "Fonctions du Moteur de règle"
 
 msgctxt "field:rule_engine,code:"
 msgid "Code"
@@ -254,8 +254,8 @@ msgid "Name"
 msgstr "Nom"
 
 msgctxt "field:rule_engine.context-function,tree_element:"
-msgid "Tree Element"
-msgstr "Elément de l'Arbre"
+msgid "Rule Functions"
+msgstr "Fonctions du Moteur de règle"
 
 msgctxt "field:rule_engine.context-function,write_date:"
 msgid "Write Date"
@@ -738,8 +738,8 @@ msgid "Test Cases"
 msgstr "Jeux de Test"
 
 msgctxt "model:ir.action,name:tree_element_window"
-msgid "Tree Elements"
-msgstr "Eléments de l'arbre"
+msgid "Rule Functions"
+msgstr "Fonctions du Moteur de règle"
 
 msgctxt "model:ir.ui.menu,name:menu_context"
 msgid "Contexts"
@@ -762,8 +762,8 @@ msgid "Tags"
 msgstr "Labels"
 
 msgctxt "model:ir.ui.menu,name:menu_tree_element"
-msgid "Tree Elements"
-msgstr "Eléments de l'arbre"
+msgid "Rule Functions"
+msgstr "Fonctions du Moteur de règle"
 
 msgctxt "model:rule_engine,name:"
 msgid "Rule"
@@ -778,7 +778,7 @@ msgid "Context"
 msgstr "Contexte"
 
 msgctxt "model:rule_engine.context-function,name:"
-msgid "Context Tree Element"
+msgid "Context Rule Function"
 msgstr ""
 
 msgctxt "model:functional_error,name:"
@@ -810,8 +810,8 @@ msgid "Tools functions"
 msgstr "Outils"
 
 msgctxt "model:rule_engine.function,name:"
-msgid "Rule Engine Tree Element"
-msgstr "Elément de l'Arbre"
+msgid "Rule Engine Function"
+msgstr "Fonction du Moteur de règles"
 
 msgctxt "model:tag,name:"
 msgid "Tag"
@@ -938,8 +938,8 @@ msgid "Test Case"
 msgstr "Jeu de Test"
 
 msgctxt "view:rule_engine.function:"
-msgid "Tree Element"
-msgstr "Elément de l'Arbre"
+msgid "Rule Function"
+msgstr "Fonction du Moteur de règle"
 
 msgctxt "view:rule_engine:"
 msgid "Debug"
